// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination.vue should render all items in pagination for less than 7 pages 1`] = `
<ul class="Pagination-list CDB-Text CDB-Size-medium">
  <!---->
  <!---->
  <!---->
  <li class="Pagination-listItem is-current"><button class="Pagination-listItemInner Pagination-listItemInner--link">1</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">2</button></li>
  <!---->
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">3</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">4</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">5</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">6</button></li>
</ul>
`;

exports[`Pagination.vue should render pagination for 12 pages from page number 1 with 1 right ellipsis 1`] = `
<ul class="Pagination-list CDB-Text CDB-Size-medium">
  <!---->
  <!---->
  <!---->
  <li class="Pagination-listItem is-current"><button class="Pagination-listItemInner Pagination-listItemInner--link">1</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">2</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--more">…</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">12</button></li>
</ul>
`;

exports[`Pagination.vue should render pagination for 12 pages from page number 5 with 2 ellipsis 1`] = `
<ul class="Pagination-list CDB-Text CDB-Size-medium">
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">1</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--more">…</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">4</button></li>
  <li class="Pagination-listItem is-current"><button class="Pagination-listItemInner Pagination-listItemInner--link">5</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">6</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--more">…</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">12</button></li>
</ul>
`;

exports[`Pagination.vue should render pagination for 12 pages from page number 12 with 1 left ellipsis 1`] = `
<ul class="Pagination-list CDB-Text CDB-Size-medium">
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">1</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--more">…</button></li>
  <li class="Pagination-listItem"><button class="Pagination-listItemInner Pagination-listItemInner--link">11</button></li>
  <li class="Pagination-listItem is-current"><button class="Pagination-listItemInner Pagination-listItemInner--link">12</button></li>
  <!---->
  <!---->
  <!---->
</ul>
`;
